--- a/templates/index.html
+++ b/templates/index.html
@@ -6,9 +6,10 @@
     <p class="lead mb-5 subtitle">플레이할 난이도를 선택하세요</p>
     
     <div class="leaderboard-buttons mb-5">
-        <a href="{{ url_for('leaderboard') }}" class="btn btn-leaderboard btn-outline-warning btn-lg px-4">
+        <!-- 일반 리더보드 버튼 임시 제거 (라우트 없음) -->
+        <!-- <a href="#" class="btn btn-leaderboard btn-outline-warning btn-lg px-4">
             <i class="fas fa-trophy me-2"></i>신 명예의 전당
-        </a>
+        </a> -->
         <a href="{{ url_for('god_leaderboard') }}" class="btn btn-leaderboard btn-outline-danger btn-lg px-4">
             <i class="fas fa-crown me-2"></i>초신 명예의 전당
         </a>
